--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/Pverdiere/test-npx/issues"
   },
-  "homepage": "https://github.com/Pverdiere/test-npx#readme"
+  "homepage": "https://github.com/Pverdiere/test-npx#readme",
+  "bin": {
+    "helloWorld": "bin/index.js"
+  }
 }
