feat: modified helloWorld function by multiply function

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "homepage": "https://github.com/Pverdiere/test-npx#readme",
   "bin": {
-    "helloWorld": "bin/index.js"
+    "multiply": "bin/index.js"
   }
 }
